2008-01-04 12:05-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m
	* GormLib/IBDocuments.h: Addition of private methods for bug#17892.

2008-01-03 20:39-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGenericEditor.m: Reformed and applied patch provided
	by Sergey Golovin.  Corrects bug#17539.

2008-01-03 20:17-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Added menu shortcut for delete/backspace
	to correct bug#15637.

2008-01-03 20:02-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Corrections for bug#19792.  
	Nib loader connector logic modified to correct this issue.

2008-01-03 19:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewKnobs.m: drkgrey changed to fgcolor.

2008-01-03 17:22-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewKnobs.m: Draw initial knobs as red
	to differentiate them from the black ones which indicates that
	the inside of a non-simple view is selected.  Corrects bug#21479.

2008-01-03 14:50-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m: Correct invalid window level
	in _repairFile: method.

2008-01-01 23:07-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m: Touch the document to mark it
	as modified in the _repairFile method only if corrections have been
	made.

2008-01-01 22:57-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m: Cleanup array after 
	display of errors/warnings.

2008-01-01 15:26-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Plugins/GModel/GNUmakefile
	* Plugins/Gorm/GNUmakefile
	* Plugins/Nib/GNUmakefile: Add dummy makefiles.

2008-01-01 15:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Plugins/GNUmakefile: Add makefile in plugins dir.
